# coursework_linux_upd

./: .gitignore  config.py  pyproject.toml  readme.md
src/: main.py  parser.py  utils.py
tests/: conftest.py  test_data.json  test_main.py  test_parser.py  test_utils.py
