[tool.poetry]
name = "coursework-linux-upd"
version = "0.1.0"
description = ""
authors = ["rustem <kaidohmary@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_linux_upd"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
